--- a/form_letter.erb
+++ b/form_letter.erb
@@ -1,9 +1,11 @@
-<html>
+<html data-theme="dark">
 <head>
   <meta charset='UTF-8'>
   <title>Thank You!</title>
+  <link rel="stylesheet" href="../src/style/pico.css" />
 </head>
 <body>
+<main class="container">
   <h1>Thanks <%= name %></h1>
   <p>Thanks for coming to our conference.  We couldn't have done it without you!</p>
 
@@ -26,5 +28,6 @@
       <td><%= "#{legislators}" %></td>
     <% end %>
   </table>
+  </main>
 </body>
 </html>
